quiz app in process

--- a/quiz-app/src/app/display-each-question/display-each-question.component.html
+++ b/quiz-app/src/app/display-each-question/display-each-question.component.html
@@ -1,10 +1,11 @@
-<form [formGroup]="questionForm" (ngSubmit)="onSubmit()">
-    <h3>{{index+1}}.{{ question.question }}</h3>
-    <div *ngFor="let answer of question.answers;let i=index">
-        <input type="radio" [value]="answer" formControlName="answer">{{i+1}}.{{ answer }}
+<form [formGroup]="questionForm" (ngSubmit)="onSubmit()" class="quiz-form">
+    <h3>{{index+1}}. {{ question.question }}</h3>
+    <div *ngFor="let answer of question.answers; let i=index" class="answer-option">
+        <input type="radio" [value]="answer" formControlName="answer" id="answer{{i}}">
+        <label for="answer{{i}}">{{i+1}}. {{ answer }}</label>
     </div>
     <div *ngIf="index+1!==questionArrayLength; else elseBlock">
-        <button type="submit" [disabled]="!questionForm.valid">-></button>
+        <button type="submit" [disabled]="!questionForm.valid">Next</button>
     </div>
     <ng-template #elseBlock>
         <button (click)="showResult()" [disabled]="!questionForm.valid">Submit Quiz</button>
