--- a/quiz-app/src/app/end-page/end-page.component.html
+++ b/quiz-app/src/app/end-page/end-page.component.html
@@ -1,1 +1,4 @@
-<h1>Your Score is:{{correctAnswersCount}}</h1>
+<div class="score-container">
+    <h1>Your Score is: {{ correctAnswersCount }}</h1>
+    <button (click)="showAllUsersResults()">Results</button>
+</div>
