--- a/quiz-app/src/app/rules-page/rules-page.component.html
+++ b/quiz-app/src/app/rules-page/rules-page.component.html
@@ -1,8 +1,12 @@
-<h1>Rules of the Quiz</h1>
-<ul *ngFor="let rule of rules; let i = index">
-    <li>
-        {{i + 1}}. {{rule}}
-    </li>
-</ul>
-<button (click)="goToStartPage()">Exit</button>
-<button (click)="goToAttemptQuiz()">Attempt Quiz</button>
+<div class="rules-container">
+    <h1>Rules of the Quiz</h1>
+    <ul>
+        <li *ngFor="let rule of rules;">
+            {{rule}}
+        </li>
+    </ul>
+    <div class="button-container">
+        <button (click)="goToStartPage()">Exit</button>
+        <button (click)="goToAttemptQuiz()">Attempt Quiz</button>
+    </div>
+</div>
