crud operation on employee details project

--- a/crud-app/src/app/component/emp-add-edit/emp-add-edit.component.html
+++ b/crud-app/src/app/component/emp-add-edit/emp-add-edit.component.html
@@ -4,9 +4,9 @@
 <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
 <div mat-dialog-content class="content">
     <div class="row">
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" >
             <mat-label>First Name</mat-label>
-            <input matInput type="text" placeholder="Ex. muneeb" formControlName="firstName">
+            <input required matInput type="text" placeholder="Ex. muneeb" formControlName="firstName">
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>Last Name</mat-label>
@@ -65,7 +65,7 @@
 </div>
 
 <div mat-dialog-actions class="action">
-    <button mat-raised-button>Cancel</button>
-    <button mat-raised-button color="primary" type="submit">Save</button>
+    <button mat-raised-button type="button" mat-dialog-close="false">Cancel</button>
+    <button mat-raised-button color="primary" [disabled]="!empForm.valid" type="submit">{{data?'Update':'Save'}}</button>
 </div>
 </form>
